--- a/information2.html
+++ b/information2.html
@@ -110,12 +110,12 @@
                     </a>
                     <a class="dropdown-item text-black display-4" href="information2.html" aria-expanded="false">
                       会社概要</a>
-                    <a class="dropdown-item text-black display-4" href="information1.html" aria-expanded="false">
+                    <a class="dropdown-item text-black display-4" href="information3.html" aria-expanded="false">
                       会社沿革</a>
-                    <a class="text-black dropdown-item display-4" href="information1.html" aria-expanded="false">
+                    <a class="text-black dropdown-item display-4" href="information4.html" aria-expanded="false">
                       組織図
                     </a>
-                    <a class="text-black dropdown-item display-4" href="information1.html" aria-expanded="false">
+                    <a class="text-black dropdown-item display-4" href="information5.html" aria-expanded="false">
                       主要な取引先
                     </a>
                   </div>
@@ -211,46 +211,19 @@
               </li>
   
               <li class="nav-item dropdown">
-                <a
-                  class="nav-link link dropdown-toggle text-black display-4"
-                  href="#"
-                  aria-expanded="false"
-                  data-toggle="dropdown-submenu"
-                  >会社案内</a
-                >
+                <a class="nav-link link dropdown-toggle text-black display-4" href="#" aria-expanded="false"
+                  data-toggle="dropdown-submenu">会社案内</a>
                 <div class="dropdown-menu">
-                  <a
-                    class="dropdown-item text-black display-4"
-                    href="information1.html"
-                    aria-expanded="false"
-                    >ご挨拶
+                  <a class="dropdown-item text-black display-4" href="information1.html" aria-expanded="false">ご挨拶
                   </a>
-                  <a
-                    class="dropdown-item text-black display-4"
-                    href="information2.html"
-                    aria-expanded="false"
-                  >
-                    会社概要</a
-                  >
-                  <a
-                    class="dropdown-item text-black display-4"
-                    href="information1.html"
-                    aria-expanded="false"
-                  >
-                    会社沿革</a
-                  >
-                  <a
-                    class="text-black dropdown-item display-4"
-                    href="information1.html"
-                    aria-expanded="false"
-                  >
+                  <a class="dropdown-item text-black display-4" href="information2.html" aria-expanded="false">
+                    会社概要</a>
+                  <a class="dropdown-item text-black display-4" href="information3.html" aria-expanded="false">
+                    会社沿革</a>
+                  <a class="text-black dropdown-item display-4" href="information4.html" aria-expanded="false">
                     組織図
                   </a>
-                  <a
-                    class="text-black dropdown-item display-4"
-                    href="information1.html"
-                    aria-expanded="false"
-                  >
+                  <a class="text-black dropdown-item display-4" href="information5.html" aria-expanded="false">
                     主要な取引先
                   </a>
                 </div>
@@ -470,7 +443,7 @@
       </div>
   </section>
 
-    <section class="content04 cid-tA2LXn8yz2  d-none" id="content04-2" >    
+    <!-- <section class="content04 cid-tA2LXn8yz2  d-none" id="content04-2" >    
 
       <div class="container">
           <div class="row justify-content-center">
@@ -567,7 +540,7 @@
   
           </div>
       </div>
-  </section>
+  </section> -->
 
   <section class="footer03 cid-rOMrW38i3d" id="footer03-f" style="padding-bottom: 25px;">
 
@@ -615,34 +588,34 @@
   
           <h3 class="col-title2 mbr-semibold pb-3 mbr-fonts-style
                 display-7"><strong>業務案内</strong></h3>
-          <ul class="list">
-  
-  
-  
-  
-  
-            <!-- <li class="item-wrap">
-  
-              <h4 class="item2 mbr-regular mbr-fonts-style display-4">会社製品</h4>
-            </li> -->
-            <li class="item-wrap">
-              <a href="walfare.html">
-                <h4 class="item2 mbr-regular mbr-fonts-style display-4">福利厚生</h4>
-              </a>
-            <li class="item-wrap">
-              <a href="recuitment.html">
-                <h4 class="item2 mbr-regular mbr-fonts-style display-4">採用情報</h4>
-              </a>
-            </li>
-            <li class="item-wrap">
-  
-              <h4 class="item2 mbr-regular mbr-fonts-style display-4"></h4>
-            </li>
-            <li class="item-wrap">
-  
-              <h4 class="item2 mbr-regular mbr-fonts-style display-4"></h4>
-            </li>
-          </ul>
+                <ul class="list">
+    
+                  <li class="item-wrap align-left">
+                    <a href="information1.html">
+                      <h4 class="item1 mbr-regular mbr-fonts-style display-4">ご挨拶</h4>
+                    </a>
+                  </li>
+                  <li class="item-wrap align-left">
+                    <a href="information2.html">
+                      <h4 class="item1 mbr-regular mbr-fonts-style display-4">会社概要</h4>
+                    </a>
+                  </li>
+                  <li class="item-wrap align-left">
+                    <a href="information3.html">
+                      <h4 class="item1 mbr-regular mbr-fonts-style display-4">会社沿革</h4>
+                    </a>
+                  </li>
+                  <li class="item-wrap align-left">
+                    <a href="information4.html">
+                      <h4 class="item1 mbr-regular mbr-fonts-style display-4">組織図</h4>
+                    </a>
+                  </li>
+                  <li class="item-wrap align-left">
+                    <a href="information5.html">
+                      <h4 class="item1 mbr-regular mbr-fonts-style display-4">主要な取引先</h4>
+                    </a>
+                  </li>
+                </ul>
   
         </div>
   
