--- a/product2.html
+++ b/product2.html
@@ -85,12 +85,12 @@
                   </a>
                   <a class="dropdown-item text-black display-4" href="information2.html" aria-expanded="false">
                     会社概要</a>
-                  <a class="dropdown-item text-black display-4" href="information1.html" aria-expanded="false">
+                  <a class="dropdown-item text-black display-4" href="information3.html" aria-expanded="false">
                     会社沿革</a>
-                  <a class="text-black dropdown-item display-4" href="information1.html" aria-expanded="false">
+                  <a class="text-black dropdown-item display-4" href="information4.html" aria-expanded="false">
                     組織図
                   </a>
-                  <a class="text-black dropdown-item display-4" href="information1.html" aria-expanded="false">
+                  <a class="text-black dropdown-item display-4" href="information5.html" aria-expanded="false">
                     主要な取引先
                   </a>
                 </div>
@@ -180,12 +180,12 @@
                 </a>
                 <a class="dropdown-item text-black display-4" href="information2.html" aria-expanded="false">
                   会社概要</a>
-                <a class="dropdown-item text-black display-4" href="information1.html" aria-expanded="false">
+                <a class="dropdown-item text-black display-4" href="information3.html" aria-expanded="false">
                   会社沿革</a>
-                <a class="text-black dropdown-item display-4" href="information1.html" aria-expanded="false">
+                <a class="text-black dropdown-item display-4" href="information4.html" aria-expanded="false">
                   組織図
                 </a>
-                <a class="text-black dropdown-item display-4" href="information1.html" aria-expanded="false">
+                <a class="text-black dropdown-item display-4" href="information5.html" aria-expanded="false">
                   主要な取引先
                 </a>
               </div>
@@ -332,6 +332,22 @@
     </div>
   </section>
   
+  <section class="list1 cid-tzckW3NyXO" id="" style="background-color: transparent;">
+
+    <div class="container">
+      <div class="row justify-content-center">
+        <div class="col-md-12 col-lg-12">
+          <h3 class="mbr-section-title mbr-fonts-style mb-4 display-2">
+            <strong>受発注</strong>
+          </h3>
+          <p class=" mbr-fonts-style mb-4 display-4">
+            お客様情報を徹底管理　受発注金額をグラフの形で表現する見やすい
+          </p>
+        </div>
+      </div>
+
+    </div>
+  </section>
 
   <section class="image3 cid-tAk94GZRfD" id="imagep3-g">
     <div class="container">
@@ -400,12 +416,24 @@
 
   </section>
 
+  <section class="list1 cid-tzckW3NyXO" id="" style="background-color: transparent;">
+
+    <div class="container">
+      <div class="row justify-content-center">
+        <div class="col-md-12 col-lg-12">
+          <h3 class="mbr-section-title mbr-fonts-style mb-4 display-2">
+            <strong>会計</strong>
+          </h3>
+          <p class=" mbr-fonts-style mb-4 display-4">
+            資金流れの完全把握　通帳写真と徹底的に紐付く
+          </p>
+        </div>
+      </div>
+
+    </div>
+  </section>
+
   <section class="image3 cid-tAk94GZRfD" id="imagep3-h">
-
-
-
-
-
     <div class="container">
       <div class="container">
         <div id="carouselExampleControls2" class="carousel slide" data-ride="carousel">
@@ -488,24 +516,28 @@
             </div>
             <div class="link-wrap" style="margin: 20px;">
 
-              <h5 class="link mbr-black mbr-fonts-style display-7">システム本体導入費用</h5>
-
-              <!-- <h5 class="link mbr-black mbr-fonts-style display-4">Easy setup
+              <h5 class="link mbr-black mbr-fonts-style display-7">
+                <strong>システム本体導入費用</strong>
                 <br>
-              </h5> -->
-
-              <h5 class="link mbr-black mbr-fonts-style display-6">クラウドデータベース導入費用</h5>
+                <p>2,980,000円（税抜）（１</p>
+              </h5>
+              <br>
+              <h5 class="link mbr-black mbr-fonts-style display-6">
+                <strong>クラウドデータベース導入費用</strong>
+                <br>
+                <p>レンタルサーバー事業者による。（２</p>
+              </h5>
                 <br>
               </h5>
 
             </div>
             <div class="card-box align-left">
               <p class="mbr-text pb-2 mbr-regular mbr-black mbr-fonts-style display-4">
-                1：導入後、会社内何台パソコンに本システムをインストールのは無制限且つユーザー数の追加にも無制限です。
+                （１：導入後、会社内何台パソコンに本システムをインストールのは無制限且つユーザー数の追加にも無制限です。
                 カスタマイズ可能、無料で対応致します。
               </p>
               <p class="mbr-text pb-2 mbr-regular mbr-black mbr-fonts-style display-4">
-                2：平均年数万円程度です。尚、クラウドデータベースを利用せず、ローカルデータベースを構築希望の場合、別途相談要。
+                （２：平均年数万円程度です。尚、クラウドデータベースを利用せず、ローカルデータベースを構築希望の場合、別途相談要。
               </p>
               <p class="mbr-text pb-2 mbr-regular mbr-black mbr-fonts-style display-4">
                 IT導入補助金を利用する場合、導入費用は大幅に削減できます。ご相談お待ちしております。
@@ -547,35 +579,34 @@
 
           <h3 class="col-title1 mbr-semibold pb-3 mbr-fonts-style
                 display-7"><strong>会社案内</strong></h3>
-          <ul class="list">
-
-            <li class="item-wrap align-left">
-              <a href="information1.html">
-                <h4 class="item1 mbr-regular mbr-fonts-style display-4">ご挨拶</h4>
-              </a>
-            </li>
-            <li class="item-wrap align-left">
-              <a href="information2.html">
-                <h4 class="item1 mbr-regular mbr-fonts-style display-4">会社概要</h4>
-              </a>
-            </li>
-            <li class="item-wrap align-left">
-              <a href="information1.html">
-                <h4 class="item1 mbr-regular mbr-fonts-style display-4">会社沿革</h4>
-              </a>
-            </li>
-            <li class="item-wrap align-left">
-              <a href="information1.html">
-                <h4 class="item1 mbr-regular mbr-fonts-style display-4">組織図</h4>
-              </a>
-            </li>
-            <li class="item-wrap align-left">
-              <a href="information1.html">
-                <h4 class="item1 mbr-regular mbr-fonts-style display-4">主要な取引先</h4>
-              </a>
-            </li>
-          </ul>
-
+                <ul class="list">
+    
+                  <li class="item-wrap align-left">
+                    <a href="information1.html">
+                      <h4 class="item1 mbr-regular mbr-fonts-style display-4">ご挨拶</h4>
+                    </a>
+                  </li>
+                  <li class="item-wrap align-left">
+                    <a href="information2.html">
+                      <h4 class="item1 mbr-regular mbr-fonts-style display-4">会社概要</h4>
+                    </a>
+                  </li>
+                  <li class="item-wrap align-left">
+                    <a href="information3.html">
+                      <h4 class="item1 mbr-regular mbr-fonts-style display-4">会社沿革</h4>
+                    </a>
+                  </li>
+                  <li class="item-wrap align-left">
+                    <a href="information4.html">
+                      <h4 class="item1 mbr-regular mbr-fonts-style display-4">組織図</h4>
+                    </a>
+                  </li>
+                  <li class="item-wrap align-left">
+                    <a href="information5.html">
+                      <h4 class="item1 mbr-regular mbr-fonts-style display-4">主要な取引先</h4>
+                    </a>
+                  </li>
+                </ul>
         </div>
 
         <div class="col-6 col-md-4 col-lg-2 md-pb">
