--- a/quality.html
+++ b/quality.html
@@ -10,7 +10,7 @@
   <link rel="shortcut icon" href="assets/images/82857ece0869bbfd97910e2c6b3dee1.png" type="image/x-icon" />
   <meta name="description" content="" />
 
-  <title>Page 2</title>
+  <title>品質管理方針 | 株式会社ソフトユージング</title>
   <link rel="stylesheet" href="assets/web/assets/mobirise-icons2/mobirise2.css" />
   <link rel="stylesheet" href="assets/web/assets/mobirise-icons/mobirise-icons.css" />
   <link rel="stylesheet" href="assets/FontAwesome/css/font-awesome.css" />
@@ -85,12 +85,12 @@
                   </a>
                   <a class="dropdown-item text-black display-4" href="information2.html" aria-expanded="false">
                     会社概要</a>
-                  <a class="dropdown-item text-black display-4" href="information1.html" aria-expanded="false">
+                  <a class="dropdown-item text-black display-4" href="information3.html" aria-expanded="false">
                     会社沿革</a>
-                  <a class="text-black dropdown-item display-4" href="information1.html" aria-expanded="false">
+                  <a class="text-black dropdown-item display-4" href="information4.html" aria-expanded="false">
                     組織図
                   </a>
-                  <a class="text-black dropdown-item display-4" href="information1.html" aria-expanded="false">
+                  <a class="text-black dropdown-item display-4" href="information5.html" aria-expanded="false">
                     主要な取引先
                   </a>
                 </div>
@@ -180,12 +180,12 @@
                 </a>
                 <a class="dropdown-item text-black display-4" href="information2.html" aria-expanded="false">
                   会社概要</a>
-                <a class="dropdown-item text-black display-4" href="information1.html" aria-expanded="false">
+                <a class="dropdown-item text-black display-4" href="information3.html" aria-expanded="false">
                   会社沿革</a>
-                <a class="text-black dropdown-item display-4" href="information1.html" aria-expanded="false">
+                <a class="text-black dropdown-item display-4" href="information4.html" aria-expanded="false">
                   組織図
                 </a>
-                <a class="text-black dropdown-item display-4" href="information1.html" aria-expanded="false">
+                <a class="text-black dropdown-item display-4" href="information5.html" aria-expanded="false">
                   主要な取引先
                 </a>
               </div>
@@ -242,6 +242,57 @@
     </nav>
   </section>
 
+  <section class="list1 cid-tzckW3NyXO" id=""
+      style="margin: 100px;background-color: transparent;"
+    >
+    
+      <div class="container">
+          <div class="row justify-content-center">
+              <div class="col-md-12 col-lg-12">
+                  <h3 class="mbr-section-title mbr-fonts-style mb-4 display-2">
+                      <strong>品質管理方針</strong>
+                  </h3>
+                  <p class="mbr-text pb-3 mbr-semibold mbr-black mbr-fonts-style display-7">
+                    　株式会社ソフトユージング(以下「当社」といいます。)は、お客様や社会との信頼を基盤として常に挑戦し続け、システム開発を中心にした情報処理事業を初めとした様々な事業活動を通じて、安定的に社会貢献を果たして行くことを目指しています。
+                  </p>
+                  <p class="mbr-text pb-3 mbr-semibold mbr-black mbr-fonts-style display-7">
+                    　当社はこの実現に向けて、常にお客様の期待と信頼に応え、 ハイセンス·ハイクオリティな品質の商品·サービスを提供していくため、次の方針に則り商品· サービスの品質管理を進めてまいります。
+                  </p>
+                  <ol id="olq" class="list mbr-fonts-style display-7">
+                      <li>
+                          <strong style="margin-bottom: 20px;">社会的責任を認識した取組の推進 </strong>
+                          <p>お客様に対して信頼される商品 サービスの提供を通じ、安全·安心で豊かな社会造りに貢献する。社会的責任を十分に認識し、
+                            品質管理に関する統轄部門を設け、品質の維持·向上のため当社全体として取組みを進めます。
+                          </p>
+                      </li>
+                      <li>
+                          <strong>コンプライアンスの徹底</strong>
+                          <p>品質管理の前提として、 法令やガイドライン、社内の規則マニュアルなど、お客様に提供する商品·サービスに関する社内外のルールの尊守を徹底します。</p>
+                      </li>
+                      <li>
+                          <strong>体制整備と継続的な改善</strong>
+                          <p>適切な品質管理を推進するため必要な体制を整備するとともに、品質管理の状況について継続的にモニタリングし、必要に応じて見直し、改善を図ります。</p>
+                      </li>
+                      <li>
+                          <strong>
+                            情報の収集·伝達·開示等の取組
+                          </strong>
+                          <p>
+                            お客様の信頼と満足を確保するため、お客様に対して商品·サービスに関する情報を適時適切に提供するとともに、品質に対するお客様の声を的確に把握し対応する仕組みを構築するなど、常に誠実で透明性の高い双方向のコミュニケーションに努めます。
+                          </p>
+                      </li>   
+                  </ol>
+                  <div style="text-align: right;">  
+                    制定日：平成30年8月20日<br>
+                    <br>
+                    代表取締役：山田　和夫<br>     
+                  </div>
+              </div>
+          </div>
+      </div>
+  </section>
+
+
   <section class="map1 cid-rOMrVNY2wf" id="map01-e">
     <div class="google-map container ">
       <iframe frameborder="0" style="border:0" src="assets\images\map.png " allowfullscreen="">
@@ -260,34 +311,34 @@
 
           <h3 class="col-title1 mbr-semibold pb-3 mbr-fonts-style
                 display-7"><strong>会社案内</strong></h3>
-          <ul class="list">
-
-            <li class="item-wrap align-left">
-              <a href="information1.html">
-                <h4 class="item1 mbr-regular mbr-fonts-style display-4">ご挨拶</h4>
-              </a>
-            </li>
-            <li class="item-wrap align-left">
-              <a href="information2.html">
-                <h4 class="item1 mbr-regular mbr-fonts-style display-4">会社概要</h4>
-              </a>
-            </li>
-            <li class="item-wrap align-left">
-              <a href="information1.html">
-                <h4 class="item1 mbr-regular mbr-fonts-style display-4">会社沿革</h4>
-              </a>
-            </li>
-            <li class="item-wrap align-left">
-              <a href="information1.html">
-                <h4 class="item1 mbr-regular mbr-fonts-style display-4">組織図</h4>
-              </a>
-            </li>
-            <li class="item-wrap align-left">
-              <a href="information1.html">
-                <h4 class="item1 mbr-regular mbr-fonts-style display-4">主要な取引先</h4>
-              </a>
-            </li>
-          </ul>
+                <ul class="list">
+    
+                  <li class="item-wrap align-left">
+                    <a href="information1.html">
+                      <h4 class="item1 mbr-regular mbr-fonts-style display-4">ご挨拶</h4>
+                    </a>
+                  </li>
+                  <li class="item-wrap align-left">
+                    <a href="information2.html">
+                      <h4 class="item1 mbr-regular mbr-fonts-style display-4">会社概要</h4>
+                    </a>
+                  </li>
+                  <li class="item-wrap align-left">
+                    <a href="information3.html">
+                      <h4 class="item1 mbr-regular mbr-fonts-style display-4">会社沿革</h4>
+                    </a>
+                  </li>
+                  <li class="item-wrap align-left">
+                    <a href="information4.html">
+                      <h4 class="item1 mbr-regular mbr-fonts-style display-4">組織図</h4>
+                    </a>
+                  </li>
+                  <li class="item-wrap align-left">
+                    <a href="information5.html">
+                      <h4 class="item1 mbr-regular mbr-fonts-style display-4">主要な取引先</h4>
+                    </a>
+                  </li>
+                </ul>
 
         </div>
 
