--- a/security3.html
+++ b/security3.html
@@ -77,12 +77,12 @@
                   </a>
                   <a class="dropdown-item text-black display-4" href="information2.html" aria-expanded="false">
                     会社概要</a>
-                  <a class="dropdown-item text-black display-4" href="information1.html" aria-expanded="false">
+                  <a class="dropdown-item text-black display-4" href="information3.html" aria-expanded="false">
                     会社沿革</a>
-                  <a class="text-black dropdown-item display-4" href="information1.html" aria-expanded="false">
+                  <a class="text-black dropdown-item display-4" href="information4.html" aria-expanded="false">
                     組織図
                   </a>
-                  <a class="text-black dropdown-item display-4" href="information1.html" aria-expanded="false">
+                  <a class="text-black dropdown-item display-4" href="information5.html" aria-expanded="false">
                     主要な取引先
                   </a>
                 </div>
@@ -172,17 +172,17 @@
                 </a>
                 <a class="dropdown-item text-black display-4" href="information2.html" aria-expanded="false">
                   会社概要</a>
-                <a class="dropdown-item text-black display-4" href="information1.html" aria-expanded="false">
+                <a class="dropdown-item text-black display-4" href="information3.html" aria-expanded="false">
                   会社沿革</a>
-                <a class="text-black dropdown-item display-4" href="information1.html" aria-expanded="false">
+                <a class="text-black dropdown-item display-4" href="information4.html" aria-expanded="false">
                   組織図
                 </a>
-                <a class="text-black dropdown-item display-4" href="information1.html" aria-expanded="false">
+                <a class="text-black dropdown-item display-4" href="information5.html" aria-expanded="false">
                   主要な取引先
                 </a>
               </div>
             </li>
-
+            
             <li class="nav-item">
               <a class="nav-link link text-black display-4" href="bussniess.html">
                 業務案内</a>
@@ -489,32 +489,34 @@
 
           <h3 class="col-title3 mbr-semibold pb-3 mbr-fonts-style
                 display-7"><strong>会社製品</strong></h3>
-          <ul class="list">
-
-            <li class="item-wrap">
-              <a href="product1.html">
-                <h4 class="item3 mbr-regular mbr-fonts-style display-4">AIポイント管理システム</h4>
-              </a>
-            </li>
-            <li class="item-wrap">
-              <a href="product2.html">
-                <h4 class="item3 mbr-regular mbr-fonts-style display-4">SU受発注会計管理システム</h4>
-              </a>
-            </li>
-            <li class="item-wrap">
-              <a href="quality.html">
-                <h4 class="item3 mbr-regular mbr-fonts-style display-4">品質管理方針</h4>
-              </a>
-            </li>
-            <li class="item-wrap">
-
-              <h4 class="item3 mbr-regular mbr-fonts-style display-4"></h4>
-            </li>
-            <li class="item-wrap">
-
-              <h4 class="item3 mbr-regular mbr-fonts-style display-4"></h4>
-            </li>
-          </ul>
+                <ul class="list">
+    
+                  <li class="item-wrap align-left">
+                    <a href="information1.html">
+                      <h4 class="item1 mbr-regular mbr-fonts-style display-4">ご挨拶</h4>
+                    </a>
+                  </li>
+                  <li class="item-wrap align-left">
+                    <a href="information2.html">
+                      <h4 class="item1 mbr-regular mbr-fonts-style display-4">会社概要</h4>
+                    </a>
+                  </li>
+                  <li class="item-wrap align-left">
+                    <a href="information3.html">
+                      <h4 class="item1 mbr-regular mbr-fonts-style display-4">会社沿革</h4>
+                    </a>
+                  </li>
+                  <li class="item-wrap align-left">
+                    <a href="information4.html">
+                      <h4 class="item1 mbr-regular mbr-fonts-style display-4">組織図</h4>
+                    </a>
+                  </li>
+                  <li class="item-wrap align-left">
+                    <a href="information5.html">
+                      <h4 class="item1 mbr-regular mbr-fonts-style display-4">主要な取引先</h4>
+                    </a>
+                  </li>
+                </ul>
 
         </div>
 
