--- a/index.html
+++ b/index.html
@@ -388,7 +388,7 @@
             <h4
               class="main-title align-center pb-3 mbr-semibold mbr-black mbr-fonts-style display-2"
             >
-              <strong>&nbsp;ソフトユージングのサービス</strong>
+              <strong>&nbsp;サービス</strong>
             </h4>
           </div>
 
