--- a/bussniess.html
+++ b/bussniess.html
@@ -10,7 +10,7 @@
   <link rel="shortcut icon" href="assets/images/82857ece0869bbfd97910e2c6b3dee1.png" type="image/x-icon" />
   <meta name="description" content="" />
 
-  <title>Page 2</title>
+  <title>業務案内 | 株式会社ソフトユージング</title>
   <link rel="stylesheet" href="assets/web/assets/mobirise-icons2/mobirise2.css" />
   <link rel="stylesheet" href="assets/web/assets/mobirise-icons/mobirise-icons.css" />
   <link rel="stylesheet" href="assets/FontAwesome/css/font-awesome.css" />
@@ -240,6 +240,131 @@
         </div>
       </div>
     </nav>
+  </section>
+
+  <section class="features6 cid-rOMrQogblI" style="margin-top: 60px;" id="">
+    <div class="container">
+      <div class="row">
+        <div class="col-12 col-md-12">
+          <h4
+            class="main-title align-center pb-3 mbr-semibold mbr-black mbr-fonts-style display-2"
+          >
+            <strong>&nbsp;サービス</strong>
+          </h4>
+        </div>
+
+        <div class="col-12 col-md-12">
+          <h4
+            class="main-title align-center pb-3 mbr-semibold mbr-black mbr-fonts-style display-4"
+          >
+            <p>株式会社ソフトユージングは、創業以来テクノロジーを通して人類と社会への貢献を果たせるよう進んで参りました。
+               株式の上場を目指し、現在は自社ビルを保有し独自の開発力を用いてAI+IoTを中心に積極的に目標に向けて取り組んでおります。
+            </p>
+            <p>
+              金融・産業・公共多岐に渡る様々な業界の大手顧客にソフトウエア開発や自社製品、運用サービスなどのシステムソリューションサービスを提供する独立系システムインテグレータ。 
+              最先端テクノロジーを活かしたAI×IoT関連自社製品開発とソリューションを提供する企業。
+            </p>
+          </h4>
+        </div>
+
+        <div class="card p-3 col-12 col-md-6 col-lg-3">
+          <div class="card-wrapper">
+            <div class="img-wrapper">
+              <img src="assets/images/05.jpg" alt="" />
+            </div>
+            <div class="card-box align-left">
+              <h4
+                class="card-title align-left mbr-semibold mbr-black mbr-fonts-style display-7"
+              >
+                <strong>SESサービス</strong>
+              </h4>
+              <p class="mbr-text pb-2 mbr-fonts-style display-6">
+                お客様からご支持して頂けるSES事業者として、常に真摯にお客様のニーズに向き合って参りました。今後も｢お客様のニーズにベストマッチした人材を、
+                ベストのタイミングで、確実に低料金で提供する」を合言葉に日々業務に取り組ませて参ります.
+              </p>
+              <!-- <div class="link-wrap">
+                          <h5 class="link align-left mbr-semibold mbr-black mbr-fonts-style display-4"><a href="#">Read more</a></h5>
+
+                      </div> -->
+            </div>
+          </div>
+        </div>
+
+        <div class="card p-3 col-12 col-md-6 col-lg-3">
+          <div class="card-wrapper">
+            <div class="img-wrapper">
+              <img src="assets/images/06.jpg" alt="" />
+            </div>
+            <div class="card-box align-left">
+              <h4
+                class="card-title align-left mbr-semibold mbr-black mbr-fonts-style display-7"
+              >
+                <strong>受託開発</strong>
+              </h4>
+              <p class="mbr-text pb-2 mbr-fonts-style display-6">
+                お客様からご支持して頂けるSES事業者として、常に真摯にお客様のニーズに向き合って参りました。今後も｢お客様のニーズにベストマッチした人材を、
+                ベストのタイミングで、確実に低料金で提供する」を合言葉に日々業務に取り組ませて参ります.
+              </p>
+
+              <!-- <div class="link-wrap">
+                          <h5 class="link align-left mbr-semibold mbr-black mbr-fonts-style display-4"><a href="#">Read more</a></h5>
+
+                      </div> -->
+            </div>
+          </div>
+        </div>
+
+        <div class="card p-3 col-12 col-md-6 col-lg-3">
+          <div class="card-wrapper">
+            <div class="img-wrapper">
+              <img src="assets/images/07.jpg" alt="" />
+            </div>
+            <div class="card-box align-left">
+              <h4
+                class="card-title align-left mbr-semibold mbr-black mbr-fonts-style display-7"
+              >
+                <strong>ITインフラ基盤構築</strong>
+              </h4>
+              <p class="mbr-text pb-2 mbr-fonts-style display-6">
+                お客様のご要望・ご予算に合わせ、インフラ基盤構築に関する最適なプロダクト選定から設計、構築、運用保守までをワンストップでご提供します.
+              </p>
+
+              <!-- <div class="link-wrap">
+                          <h5 class="link align-left mbr-semibold mbr-black mbr-fonts-style display-4"><a href="#">Read more</a></h5>
+
+                      </div> -->
+            </div>
+          </div>
+        </div>
+
+        <div class="card p-3 col-12 col-md-6 col-lg-3">
+          <div class="card-wrapper">
+            <div class="img-wrapper">
+              <img src="assets/images/08.jpg" alt="" />
+            </div>
+            <div class="card-box align-left">
+              <h4
+                class="card-title align-left mbr-semibold mbr-black mbr-fonts-style display-7"
+              >
+                <strong>組込開発及び AI+IoT関連製品開発</strong>
+              </h4>
+              <p class="mbr-text pb-2 mbr-fonts-style display-6">
+                車載カーナビ開発、医療機器関連製品開発の組込開発、及びAIoT製品開発
+              </p>
+              <!-- <div class="link-wrap">
+                          <h5 class="link align-left mbr-semibold mbr-black mbr-fonts-style display-4"><a href="#">Read more</a></h5>
+
+                      </div> -->
+            </div>
+          </div>
+        </div>
+        <div class="card p-3 col-12 col-md-6 col-lg-6">
+          テレワークコーナー(令和4年8月22日から営業開始)<br>
+          月曜～金曜9:00～18:00 【時間利用】30分/500円～最大9時間利用可能（9時間以上の場合は事前要相談）<br>
+          ※ お電話での事前予約が必須となります。<br>
+        </div>
+      </div>
+    </div>
   </section>
 
   <section class="map1 cid-rOMrVNY2wf" id="map01-e">
