--- a/product1.html
+++ b/product1.html
@@ -283,7 +283,7 @@
 
 
               <h4 class="card-title align-center mbr-semibold pb-3 mbr-black mbr-fonts-style display-2">
-                <strong>AIポイント管理システムの特長</strong>
+                <strong>AIポイント管理システムの応用場面</strong>
               </h4>
               <!-- <p class="mbr-text pb-3 mbr-regular mbr-black mbr-fonts-style display-7">Lorem ipsum dolor sit amet,
                             consectetur adipiscing elit. Donec ullamcorper neque dapibus ipsum semper, sit amet luctus
