--- a/walfare.html
+++ b/walfare.html
@@ -261,15 +261,15 @@
             </p>
           </div>
             <div class="col-md-4 col-lg-4 first col-8">
-                <div class="block"> <img src="assets/images/02.jpg" alt=""></div>
+                <div class="block"> <img src="assets/images/w1.png" alt=""></div>
             </div>
 
             <div class="col-md-4 col-lg-4 col-12">
-                <div class="block"><img src="assets/images/03.jpg" alt=""> </div>
+                <div class="block"><img src="assets/images/w2.png" alt=""> </div>
             </div>
 
             <div class="col-md-4 col-lg-4 last col-12">
-                <div class="block"> <img src="assets/images/05.jpg" alt=""></div>
+                <div class="block"> <img src="assets/images/w3.png" alt=""></div>
             </div>
 
         </div>
@@ -286,15 +286,15 @@
     <div class="container">
         <div class="row">
             <div class="col-md-4 col-lg-4 first col-12">
-                <div class="block"> <img src="assets/images/02.jpg" alt=""></div>
+                <div class="block"> <img src="assets/images/w4.png" alt=""></div>
             </div>
 
             <div class="col-md-4 col-lg-4 col-12">
-                <div class="block"><img src="assets/images/03.jpg" alt=""> </div>
+                <div class="block"><img src="assets/images/w5.png" alt=""> </div>
             </div>
 
             <div class="col-md-4 col-lg-4 last col-12">
-                <div class="block"> <img src="assets/images/05.jpg" alt=""></div>
+                <div class="block"> <img src="assets/images/w6.png" alt=""></div>
             </div>
 
         </div>
@@ -311,15 +311,15 @@
     <div class="container">
         <div class="row">
             <div class="col-md-4 col-lg-4 first col-12">
-                <div class="block"> <img src="assets/images/02.jpg" alt=""></div>
+                <div class="block"> <img src="assets/images/w7.png" alt=""></div>
             </div>
 
             <div class="col-md-4 col-lg-4 col-12">
-                <div class="block"><img src="assets/images/03.jpg" alt=""> </div>
+                <div class="block"><img src="assets/images/w8.png" alt=""> </div>
             </div>
 
             <div class="col-md-4 col-lg-4 last col-12">
-                <div class="block"> <img src="assets/images/05.jpg" alt=""></div>
+                <div class="block"> <img src="assets/images/w9.png" alt=""></div>
             </div>
 
         </div>
@@ -336,15 +336,15 @@
     <div class="container">
         <div class="row">
             <div class="col-md-4 col-lg-4 first col-12">
-                <div class="block"> <img src="assets/images/02.jpg" alt=""></div>
+                <div class="block"> <img src="assets/images/w10.png" alt=""></div>
             </div>
 
             <div class="col-md-4 col-lg-4 col-12">
-                <div class="block"><img src="assets/images/03.jpg" alt=""> </div>
+                <div class="block"><img src="assets/images/w12.png" alt=""> </div>
             </div>
 
             <div class="col-md-4 col-lg-4 last col-12">
-                <div class="block"> <img src="assets/images/05.jpg" alt=""></div>
+                <div class="block"> <img src="assets/images/w16.png" alt=""></div>
             </div>
 
         </div>
