--- a/bussniess.html
+++ b/bussniess.html
@@ -270,7 +270,7 @@
         <div class="card p-3 col-12 col-md-6 col-lg-3">
           <div class="card-wrapper">
             <div class="img-wrapper">
-              <img src="assets/images/05.jpg" alt="" />
+              <img src="assets/images/service3.jpg" alt="" />
             </div>
             <div class="card-box align-left">
               <h4
@@ -293,7 +293,7 @@
         <div class="card p-3 col-12 col-md-6 col-lg-3">
           <div class="card-wrapper">
             <div class="img-wrapper">
-              <img src="assets/images/06.jpg" alt="" />
+              <img src="assets/images/service4.jpg" alt="" />
             </div>
             <div class="card-box align-left">
               <h4
@@ -317,7 +317,7 @@
         <div class="card p-3 col-12 col-md-6 col-lg-3">
           <div class="card-wrapper">
             <div class="img-wrapper">
-              <img src="assets/images/07.jpg" alt="" />
+              <img src="assets/images/service1.jpg" alt="" />
             </div>
             <div class="card-box align-left">
               <h4
@@ -340,7 +340,7 @@
         <div class="card p-3 col-12 col-md-6 col-lg-3">
           <div class="card-wrapper">
             <div class="img-wrapper">
-              <img src="assets/images/08.jpg" alt="" />
+              <img src="assets/images/service2.jpg" alt="" />
             </div>
             <div class="card-box align-left">
               <h4
