--- a/index.html
+++ b/index.html
@@ -1161,7 +1161,7 @@
     </section>
 
  <section class="map1 cid-rOMrVNY2wf" id="map01-e">
-  <div class="google-map container ">
+  <div class="google-map container-fluid ">
     <iframe frameborder="0" style="border:0" src="assets\images\map.png " allowfullscreen="">
       </iframe>
     </div>
