--- a/product1.html
+++ b/product1.html
@@ -260,7 +260,7 @@
               <!-- <div class="mbr-section-btn pb-5"><a class="btn btn-sm btn-primary display-4" href="#">Sign up</a> <a class="btn btn-sm btn-black-outline display-4" href="#">Learn more</a></div> -->
             </div>
 
-            <img src="assets/images/04.jpg" alt="">
+            <img src="assets/images/post2.jpg" alt="">
 
           </div>
         </div>
