--- a/product2.html
+++ b/product2.html
@@ -264,7 +264,7 @@
               </div> -->
             </div>
 
-            <img src="assets/images/04.jpg" alt="">
+            <img src="assets/images/post2.jpg" alt="">
 
           </div>
         </div>
@@ -282,7 +282,7 @@
 
 
         <div class="img-col col-12 md-pb col-md-12 col-lg-6 m-auto">
-          <img src="assets/images/03.jpg" alt="">
+          <img src="assets/images/020101.jpg" alt="">
 
         </div>
 
