--- a/information2.html
+++ b/information2.html
@@ -541,6 +541,12 @@
           </div>
       </div>
   </section> -->
+  <section class="map1 cid-rOMrVNY2wf" id="map01-e">
+    <div class="google-map container-fluid ">
+      <iframe frameborder="0" style="border:0" src="assets\images\map.png " allowfullscreen="">
+        </iframe>
+      </div>
+  </section>
 
   <section class="footer03 cid-rOMrW38i3d" id="footer03-f" style="padding-bottom: 25px;">
 
